--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@ body {
   max-width: 390px;
   margin: 0 auto;
   display: flex;
+  flex-direction: column;
 }
 
 header {
@@ -62,6 +63,13 @@ a:hover{
 
 main {
   min-height: calc(100vh - var(--header-height) - var(--footer-height));
+}
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-bottom: 2rem;
 }
 
 footer {
